[tool.poetry]
name = "itils"
version = "0.0.1"
description = "A Python CLI for transforming images."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
