[tool.poetry]
name = "itils"
version = "0.0.1"
description = "A Python CLI for transforming images."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^3.0", python = "<3.8"}
plac = "^1.3.2"
Wand = "^0.6.6"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.812"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
itils = "itils.cli:console_scripts_main"
